# climate_iastate

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mhw_README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: climatology.yml  datasets.yml  regions.geojson  runtime.yml
docs/: architecture_runtime.md  dashboard_wireframe.md  user_guide.md
docs/archive/: coding_agent_packet_mhw_state_dashboard.md
docs/plans/: sequential_coding_plan.md
infra/traefik/: dynamic.yml  traefik.yml
notebooks/: step4_climatology_explore.ipynb  step5_state_engine_explore.ipynb  step6_aggregates_explore.ipynb  step8_backfill_qa.ipynb
scripts/: build_pdf.py  daily_refresh.sh
src/api/: main.py  routes_indices.py  routes_maps.py  routes_states.py  schema.py
src/dashboard/: MHW_Dashboard.py  app.py
src/dashboard/components/: labels.py  map_mhw.py  predictability_panel.py  risk_gauge.py  ts_event_metrics.py
src/dashboard/pages/: 1_Operational.py  1_operational.py  2_Historical.py  2_historical.py  3_User_Guide.py
src/mhw/climatology/: build_mu_theta.py  smooth_doy.py  storage.py
src/mhw/fetch/: indices.py  oisst.py
src/mhw/regions/: masks.py  weights.py
src/mhw/states/: aggregates.py  risk.py  update_states.py
tests/: conftest.py  test_aggregates.py  test_api.py  test_risk.py  test_states.py
